@@ -4,6 +4,12 @@
 -> what is the return type of printf ?
 -> if int is passed as argument, while float was expected (or vice-versa), do type casting
 
+[[[[-> unary operator constructor mein haga -_-]]]
+
+--------------------------------------------------------------
+float gcd(int a, int b, int c, float f1, float f2, int d){
+	return a/b;				<- some error here
+}
 --------------------------------------------------------------
 int gcd(int a, int b, int c, float f1, float f2, int d){
 	return a/b;
